# cookiecutter-beet

./: CHANGELOG.md  README.md  cookiecutter.json  pyproject.toml  tbump.toml
hooks/: post_gen_project.py
{{cookiecutter.project_namespace}}/: .pre-commit-config.yaml  LICENSE  Makefile  beet-release.json  beet.json  pyproject.toml  tasks.py  tbump.toml
{{cookiecutter.project_namespace}}/datapack/data/global/advancements/: {{cookiecutter.datapack_namespace}}.json
{{cookiecutter.project_namespace}}/datapack/data/minecraft/tags/functions/: load.json
{{cookiecutter.project_namespace}}/datapack/data/{{cookiecutter.datapack_namespace}}/advancements/{{cookiecutter.project_namespace}}/: root.json
{{cookiecutter.project_namespace}}/datapack/data/{{cookiecutter.datapack_namespace}}/functions/{{cookiecutter.project_namespace}}/: install.mcfunction  load.mcfunction  uninstall.mcfunction
{{cookiecutter.project_namespace}}/datapack/data/{{cookiecutter.user_namespace}}/advancements/{{cookiecutter.project_namespace}}/: root.json  {{cookiecutter.project_namespace}}.json
{{cookiecutter.project_namespace}}/datapack/data/{{cookiecutter.user_namespace}}/functions/{{cookiecutter.project_namespace}}/: install.mcfunction  load.mcfunction  uninstall.mcfunction
