{%- if cookiecutter.use_poetry == "y" -%}
[tool.poetry]
name = "{{ cookiecutter.project_namespace }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.description }}"
authors = ["{{ cookiecutter.github_username }}"]

[tool.poetry.dependencies]
python = "^3.9"
beet = "^0.13.0"
tbump = "^6.3.1"
pre-commit = "^2.10.1"
black = "^20.8b1"
isort = "^5.7.0"
python-dotenv = "^0.15.0"
invoke = "^1.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 95

[tool.isort]
line_length = 95
{%- endif -%}